# autodoc

./: Cargo.toml  README.md  build.rs  install-hooks.sh  run_tests.sh
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-commit  pre-push
blueprint/: autodoc-blueprint.md  implementation-plan.md
src/: config_file.rs  dependencies.rs  diagrams.rs  errors.rs  init.rs  main.rs  templates.rs  watcher.rs
src/builders/: mod.rs
src/config/: mod.rs
src/discovery/: mod.rs
test-comprehensive/: 00-setup.md  01-introduction.md
test-init/: 00-setup.md  01-introduction.md  autodoc.yml
test-init-check/: 00-setup.md  01-introduction.md
test-init/output/: document.docx  document.html
test-project/: 00-setup.md  01-introduction.md
tests/: e2e_tests.rs  error_tests.rs  integration_tests.rs
