[package]
name = "autodoc"
version = "0.1.0"
edition = "2021"
description = "Enterprise-grade document generation with Pandoc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/autodoc"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.0"
which = "4.0"
natord = "1.0"
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tempfile = "3.0"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
pisnge = "0.2.5"
svg2pdf = "0.13.0"
notify = "6.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
