[package]
name = "autodoc"
version = "0.1.0"
edition = "2021"
description = "Autoamtic Document generation with Pandoc"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/autodoc"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.0"
which = "4.0"
natord = "1.0"
regex = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tempfile = "3.0"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
pisnge = "0.2.5"
svg2pdf = "0.13.0"
notify = "6.0"
mermaid-rs = "0.1.1"
resvg = "0.45"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
[build-dependencies]
vergen = { version = "8.0", features = ["git", "gitcl"] }

# Security patches for unmaintained/unsound dependencies
[patch.crates-io]
# TODO: Fix const-cstr security issue (RUSTSEC-2023-0020)
# const-cstr v0.3.0 is unmaintained and unsound - violates safety contract
# Dependency chain: pisnge -> font-kit -> yeslogic-fontconfig-sys -> const-cstr
# 
# Potential solutions:
# 1. Update pisnge to newer version that doesn't use font-kit
# 2. Replace pisnge with alternative PNG processing library
# 3. Wait for font-kit to update yeslogic-fontconfig-sys dependency
# 4. Use cargo patch to replace const-cstr with const-str or cstr alternatives
#
# For now, this is a transitive dependency issue that requires upstream fixes
